scribble-cli/src/test/resources/good/misc/globals/gdo/Do15.scr
module good.misc.globals.gdo.Do15;


global protocol Do15(role A, role B)
{
	choice at A
	{
		l1() from A to B;
		do Do15(A, B);
	}
	or
	{
		l2() from A to B;
	}
	//l3() from A to B;  // Uncomment is bad
}

