scribble-cli/src/test/resources/bad/wfchoice/oldwfchoice/globals/gchoice/Choice05b.scr
module bad.oldwfchoice.gchoice.Choice05b;


// Bad only for -oldwf; good by default
global protocol Choice5b(role A, role B)
{
	choice at B
	{
		l1() from B to A;  // Comment is bad
		choice at A
		{
			l1() from A to B;
		}
		or
		{
			l2() from A to B;
		}
	}
	or
	{
		choice at B
		{
			l2() from B to A;
			//l3() from B to A;  // Comment is still bad
		}
		or
		{
			////l3() from B to A;
			l2() from B to A;  // Uncomment OK unless l3() is commented
			//l4() from B to A;
			////l1() from B to A;  // Uncomment OK unless l3() is commented
		}
	}
}

